Feature 2279 modification: added third-party libs for pdf generation.
git-svn-id: http://talendforge.org/svn/tos/trunk@7732 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/.classpath
+++ b/org.talend.libraries/.classpath
@@ -33,5 +33,10 @@
 	<classpathentry exported="true" kind="lib" path="talend-file-enhanced-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="core-renderer.jar"/>
+	<classpathentry exported="true" kind="lib" path="core-renderer-minimal.jar"/>
+	<classpathentry exported="true" kind="lib" path="itext-paulo-155.jar"/>
+	<classpathentry exported="true" kind="lib" path="minium.jar"/>
+	<classpathentry exported="true" kind="lib" path="Tidy.jar"/>
 	<classpathentry kind="output" path="class"/>
 </classpath>
