--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -90,7 +90,12 @@ bin.includes = .,\
                derby.jar,\
                derbyclient.jar,\
                jt400.jar,\
-               hsqldb.jar
+               hsqldb.jar,\
+               minium.jar,\
+               core-renderer-minimal.jar,\
+               core-renderer.jar,\
+               itext-paulo-155.jar,\
+               Tidy.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
