--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -95,7 +95,8 @@ bin.includes = .,\
                core-renderer-minimal.jar,\
                core-renderer.jar,\
                itext-paulo-155.jar,\
-               Tidy.jar
+               Tidy.jar,\
+               sapdbc.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
