git-svn-id: http://talendforge.org/svn/tos/trunk@12500 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/.classpath
+++ b/org.talend.libraries/.classpath
@@ -39,5 +39,6 @@
 	<classpathentry exported="true" kind="lib" path="core-renderer-minimal.jar"/>
 	<classpathentry exported="true" kind="lib" path="itext-paulo-155.jar"/>
 	<classpathentry exported="true" kind="lib" path="minium.jar"/>
+	<classpathentry kind="lib" path="jxl.jar"/>
 	<classpathentry kind="output" path="class"/>
 </classpath>
