--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -96,7 +96,8 @@ bin.includes = .,\
                core-renderer.jar,\
                itext-paulo-155.jar,\
                Tidy.jar,\
-               sapdbc.jar
+               sapdbc.jar,\
+               jxl.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
