Modification: resolve the compilation error, add the jxl.jar in libraries.
git-svn-id: http://talendforge.org/svn/tos/trunk@12550 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/.classpath
+++ b/org.talend.libraries/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="jxl.jar"/>
 	<classpathentry exported="true" kind="lib" path="sapdbc.jar"/>
 	<classpathentry exported="true" kind="lib" path="Tidy.jar"/>
 	<classpathentry exported="true" kind="lib" path="hsqldb.jar"/>
@@ -39,6 +40,5 @@
 	<classpathentry exported="true" kind="lib" path="core-renderer-minimal.jar"/>
 	<classpathentry exported="true" kind="lib" path="itext-paulo-155.jar"/>
 	<classpathentry exported="true" kind="lib" path="minium.jar"/>
-	<classpathentry kind="lib" path="jxl.jar"/>
 	<classpathentry kind="output" path="class"/>
 </classpath>
