tMapPersistent ok for simple jobs: ALL MATCHES and LAST MATCH (Warning: tMapPersistent is a temporary component)
git-svn-id: http://talendforge.org/svn/tos/trunk@13181 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/HashTests/.classpath
+++ b/HashTests/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/systemRoutines.jar"/>
 	<classpathentry kind="lib" path="lib/talend_file_enhanced_20070724.jar"/>
 	<classpathentry kind="lib" path="lib/userRoutines.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.talend.librariesmanager"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
