Modification: add salesforce_enterprise.jar into the library.
git-svn-id: http://talendforge.org/svn/tos/trunk@13297 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -97,7 +97,8 @@ bin.includes = .,\
                itext-paulo-155.jar,\
                Tidy.jar,\
                sapdbc.jar,\
-               jxl.jar
+               jxl.jar,\
+               salesforce_enterprise.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
