--- a/org.talend.libraries/.classpath
+++ b/org.talend.libraries/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="salesforce_enterprise.jar"/>
 	<classpathentry exported="true" kind="lib" path="jxl.jar"/>
 	<classpathentry exported="true" kind="lib" path="sapdbc.jar"/>
 	<classpathentry exported="true" kind="lib" path="Tidy.jar"/>
