--- a/HashTests/.classpath
+++ b/HashTests/.classpath
@@ -13,7 +13,7 @@
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.3.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/xxl.jar" sourcepath="/XXL"/>
+	<classpathentry kind="lib" path="lib/xxl.jar" sourcepath="/home/amaumont/data/dev/libs/java/xxl_1_0"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.talend.commons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.talend.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.talend.designer.components.localprovider"/>
