--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -98,7 +98,14 @@ bin.includes = .,\
                Tidy.jar,\
                sapdbc.jar,\
                jxl.jar,\
-               salesforce_enterprise.jar
+               salesforce_enterprise.jar,\
+               org.apache.directory.studio.ldapbrowser.core_1.1.0.v20080331.jar,\
+               antlr-2.7.7.jar,\
+               org.apache.directory.studio.ldifparser_1.1.0.v20080331.jar,\
+               org.apache.directory.studio.jars_1.1.0.v20080331.jar,\
+               shared-ldap-0.9.8.jar,\
+               shared-ldap-constants-0.9.8.jar,\
+               nlog4j-1.2.25.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
