feature 0003643  enhanced: Add author column, ecosystem preference page and ecosystem provider
git-svn-id: http://talendforge.org/svn/tos/trunk@13700 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.ecosystem/plugin.properties
+++ b/org.talend.designer.components.ecosystem/plugin.properties
@@ -1,2 +1,7 @@
 RefreshComponenentsAction.Label=Refresh Componenents List
 DownloadComponenentsAction.Label=Download Selected Components
+Ecosystem=Ecosystem
+# // ============================================================================
+# ====================================================================
+pluginName = Ecosystem Model
+providerName = www.example.org
