feature 3627 finsihed. 1: Add a action and wizard to support create job by jobtemplate 2: Add mechanism to load job template from xml files. 3: Migrate ComponentSettingView to wizard to supply component parameters setting function.(Modify some controllers.)
git-svn-id: http://talendforge.org/svn/tos/trunk@13823 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/.classpath
+++ b/org.talend.libraries/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="jaxen-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="nlog4j-1.2.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="shared-ldap-0.9.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="shared-ldap-constants-0.9.8.jar"/>
