--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -105,7 +105,8 @@ bin.includes = .,\
                org.apache.directory.studio.jars_1.1.0.v20080331.jar,\
                shared-ldap-0.9.8.jar,\
                shared-ldap-constants-0.9.8.jar,\
-               nlog4j-1.2.25.jar
+               nlog4j-1.2.25.jar,\
+               jaxen-1.1.1.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
