bug 3516 fixed: for the environment problem, still can't reproduce this bug itself, So, add log when fail. (the axis.jar catch Exception but don't throw it again, so there need do a little refactory to get the exception in TOS.)
git-svn-id: http://talendforge.org/svn/tos/trunk@13904 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -106,7 +106,8 @@ bin.includes = .,\
                shared-ldap-0.9.8.jar,\
                shared-ldap-constants-0.9.8.jar,\
                nlog4j-1.2.25.jar,\
-               jaxen-1.1.1.jar
+               jaxen-1.1.1.jar,\
+               wsdl4j-1.5.1.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
