--- a/org.talend.libraries/.classpath
+++ b/org.talend.libraries/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="talend_file_enhanced_20070724.jar"/>
 	<classpathentry exported="true" kind="lib" path="wsdl4j-1.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="jaxen-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="nlog4j-1.2.25.jar"/>
@@ -43,7 +44,6 @@
 	<classpathentry exported="true" kind="lib" path="iijdbc.jar"/>
 	<classpathentry exported="true" kind="lib" path="javacsv.jar"/>
 	<classpathentry exported="true" kind="lib" path="ldapjdk.jar"/>
-	<classpathentry exported="true" kind="lib" path="talend-file-enhanced-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="core-renderer.jar"/>
