--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -77,7 +77,6 @@ bin.includes = .,\
                iijdbc.jar,\
                javacsv.jar,\
                ldapjdk.jar,\
-               talend-file-enhanced-1.1.jar,\
                interclient.jar,\
                sqlitejdbc-v033-nested.jar,\
                jaybird-2.1.1.jar,\
@@ -107,7 +106,8 @@ bin.includes = .,\
                shared-ldap-constants-0.9.8.jar,\
                nlog4j-1.2.25.jar,\
                jaxen-1.1.1.jar,\
-               wsdl4j-1.5.1.jar
+               wsdl4j-1.5.1.jar,\
+               talend_file_enhanced_20070724.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
