feature 4051 added: update the jdbc driver to the last supported version.
git-svn-id: http://talendforge.org/svn/tos/trunk@14735 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.libraries/build.properties
+++ b/org.talend.libraries/build.properties
@@ -56,7 +56,6 @@ bin.includes = .,\
                ojdbc14.jar,\
                org.eclipse.emf.codegen_2.2.0.v200605081806.jar,\
                dom4j-1.6.1.jar,\
-               postgresql-8.1-405.jdbc3.jar,\
                db2jcc.jar,\
                db2jcc_license_cu.jar,\
                xerces-J_1.4.0.jar,\
@@ -107,7 +106,8 @@ bin.includes = .,\
                nlog4j-1.2.25.jar,\
                jaxen-1.1.1.jar,\
                wsdl4j-1.5.1.jar,\
-               talend_file_enhanced_20070724.jar
+               talend_file_enhanced_20070724.jar,\
+               postgresql-8.3-603.jdbc3.jar
 source.. = src/main/java/
 src.includes = src/main/java/,\
                jakarta-oro-2.0.8.jar
