--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.talend</groupId>
     <artifactId>org.talend.tos</artifactId>
-    <version>4.3-SNAPSHOT</version>
+    <version>5.0.1</version>
 
     <packaging>pom</packaging>
 
