feature TDI-19094 added: refactor the dnd function to config it in extension point.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@76741 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -9,5 +9,21 @@
             supportJDBC="false">
       </DBMetadataProvider>
    </extension>
+   <extension
+         point="org.talend.core.runtime.repositoryComponent_provider">
+      <RepositoryComponent
+            input="tHBaseInput"
+            name="HBASE"
+            output="tHBaseOutput"
+            type="HBASE"
+            withSchema="true">
+         <Item
+               clazz="org.talend.core.model.properties.DatabaseConnectionItem">
+         </Item>
+         <DBType
+               type="HBASE">
+         </DBType>
+      </RepositoryComponent>
+   </extension>
 
 </plugin>
