For TDI-19914 to tuning the UI
git-svn-id: http://talendforge.org/svn/tos/trunk@81475 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/plugin.xml
+++ b/org.talend.oozie.scheduler/plugin.xml
@@ -6,6 +6,7 @@
       <view
             category="org.talend.core.root"
             class="org.talend.oozie.scheduler.views.OozieSchedulerView"
+            icon="icons/oozie_schedule.gif"
             id="org.talend.oozie.scheduler.views.OozieSchedulerView"
             name="Oozie Scheduler"
             restorable="true">
