--- a/org.talend.oozie.scheduler/.classpath
+++ b/org.talend.oozie.scheduler/.classpath
@@ -45,12 +45,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/xmlenc-0.52.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hadoop-core-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/oozie-client-3.0.2.jar" sourcepath="/org.talend.oozie.integration/lib/yahoo-oozie-3.0.2-0.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.talend.oozie.integration.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.talend.oozie.integration"/>
-	<classpathentry kind="lib" path="lib/hadoop-core-1.0.2.jar"/>
-	<classpathentry kind="lib" path="lib/oozie-client-3.0.2.jar" sourcepath="/org.talend.oozie.integration/lib/yahoo-oozie-3.0.2-0.zip"/>
-	<classpathentry kind="lib" path="lib/org.talend.oozie.integration.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
