bug TDI-21212 fixed: move preference page to oozie plugin. (only move the content of the xml, to simplify and minimize any risk now)
git-svn-id: http://talendforge.org/svn/tos/trunk@83892 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/plugin.xml
+++ b/org.talend.oozie.scheduler/plugin.xml
@@ -12,5 +12,14 @@
             restorable="true">
       </view>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            category="org.talend.core.prefs"
+            class="org.talend.designer.core.ui.preferences.OozieSchedulerPreferencePage"
+            id="org.talend.designer.core.oozie.scheduler"
+            name="Oozie">
+      </page>
+   </extension>
 
 </plugin>
