Fix Pig issues using HCatStorer without a tPigLoad with HCatLoader
git-svn-id: http://talendforge.org/svn/tos/trunk@84067 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -22,3 +22,5 @@ PARTITION_KEYVALUE.NAME=Partition filter
 REGISTER_JAR.NAME=Register jar
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
+
+THRIFT_SERVER.NAME=HCat metastore
