TDI-20077: Add the Kerberos support on HDFS and Pig components
git-svn-id: http://talendforge.org/svn/tos/trunk@84224 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -20,3 +20,6 @@ GROUP.NAME=Group
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+USE_KRB.NAME=Use kerberos authentication (Experimental)
+NAMENODE_PRINCIPAL.NAME=Namenode principal
