--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -23,3 +23,6 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 DELETE_PATH.NAME=Delete Path
 CURRENT_STATUS.NAME=Current Status
+
+USE_KRB.NAME=Use kerberos authentication (Experimental)
+NAMENODE_PRINCIPAL.NAME=Namenode principal
