--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSPut/tHDFSPut_messages.properties
@@ -34,3 +34,6 @@ PROXY_PORT.NAME=Proxy port
 PROXY_USERNAME.NAME=Proxy user
 USE_PROXY.NAME=Use Socks Proxy
 APPEND.NAME=Append
+
+USE_KRB.NAME=Use kerberos authentication (Experimental)
+NAMENODE_PRINCIPAL.NAME=Namenode principal
