--- a/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
@@ -54,3 +54,7 @@ REGISTER_JAR.ITEM.JAR_PATH=Jar path
 PARTITION_FILTER.NAME=Partition filter
 PARTITION_FILTER.ITEM.PART_NAME=Partition name
 PARTITION_FILTER.ITEM.PART_VALUE=Partition value
+
+USE_KRB.NAME=Use kerberos authentication (Experimental)
+NAMENODE_PRINCIPAL.NAME=Namenode principal
+JOBTRACKER_PRINCIPAL.NAME=Jobtracker principal
