--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
@@ -23,3 +23,6 @@ FILENAME.NAME=File Name
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+USE_KRB.NAME=Use kerberos authentication (Experimental)
+NAMENODE_PRINCIPAL.NAME=Namenode principal
