--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -28,3 +28,6 @@ FILE_ACTION.ITEM.OVERWRITE=Overwrite
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+USE_KRB.NAME=Use kerberos authentication (Experimental)
+NAMENODE_PRINCIPAL.NAME=Namenode principal
