--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -19,6 +19,7 @@ NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
 PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
+REQUIRED_AUTHENTICATION.NAME=Required authentication
 SCHEMA.NAME=SCHEMA
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
