--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -11,6 +11,7 @@ DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
 DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 DB_VERSION.ITEM.MapR=MapR
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
+DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 USERNAME.NAME=User name
