fix Feature TDI-21923: support CDH4 for tHBaseXXX components
git-svn-id: http://talendforge.org/svn/tos/trunk@87513 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -15,3 +15,4 @@ HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
+HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
