fix Feature TDI-21927: support CDH4 for tPigXXX components
git-svn-id: http://talendforge.org/svn/tos/trunk@87530 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
@@ -15,6 +15,7 @@ PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 PIG_VERSION.ITEM.CLOUDERA_0.20_CDH3U1=Cloudera 0.20 CDH3U1
 PIG_VERSION.ITEM.MAPR=MapR
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
+PIG_VERSION.ITEM.CLOUDERA_CDH4=Cloudera CDH4
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
