TDI-21930: Add the distribution closed list to the hadoop components
git-svn-id: http://talendforge.org/svn/tos/trunk@87531 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -11,6 +11,13 @@ HBASE_PARAMETERS.ITEM.VALUE=Value
 MAPPING.ITEM.FAMILY_COLUMN=Column family
 MAPPING.ITEM.COLUMN_LIST=Column
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.APACHE=Apache
+
 HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203
