--- a/org.talend.designer.components.tishadoopprovider/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -52,6 +52,13 @@ NB_LINE.NAME=Number of line
 CUSTOM_ROW_KEY.NAME=Custom Row Key
 ROW_KEY.NAME=
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.APACHE=Apache
+
 HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203
