--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -3,6 +3,11 @@
 HELP=org.talend.help.tHCatalogOutput
 LONG_NAME=Writes data to HCatalog
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+
 HCAT_VERSION.NAME=HCatalog version
 HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 
