--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -7,12 +7,20 @@ LONG_NAME=Writes data to HDFS
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 CONNECTION.NAME=Component list
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.APACHE=Apache
+
 DB_VERSION.NAME=Hadoop version
-DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
 DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
 DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 DB_VERSION.ITEM.MapR=MapR
+DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
