--- a/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages.properties
@@ -26,6 +26,12 @@ TRIM_COLUMN.ITEM.TRIM=Trim
 
 NB_LINE.NAME=Number of line
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.APACHE=Apache
+
 HIVE_VERSION.NAME=Hive version
 HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203
