--- a/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
@@ -9,6 +9,12 @@ MODE.NAME=Mode
 LOCAL.NAME=Local
 MAPREDUCE.NAME=Map/Reduce
 
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.APACHE=Apache
+
 PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
