--- a/org.talend.designer.components.tishadoopprovider/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHBaseInput/tHBaseInput_messages.properties
@@ -14,6 +14,13 @@ MAPPING.ITEM.COLUMN=Column
 MAPPING.ITEM.FAMILY_COLUMN=Column family
 NB_LINE.NAME=Number of line
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.APACHE=Apache
+
 HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203
