--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -4,6 +4,14 @@ CODE.NAME=Code
 HELP=org.talend.help.tHDFSConnection
 LONG_NAME=Create a connection to HDFS
 
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.APACHE=Apache
+
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
 DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
