--- a/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigLoad/tPigLoad_messages.properties
@@ -19,7 +19,7 @@ PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 PIG_VERSION.ITEM.CLOUDERA_0.20_CDH3U1=Cloudera 0.20 CDH3U1
-PIG_VERSION.ITEM.MAPR=MapR
+PIG_VERSION.ITEM.MAPR=MapR 1.2.0
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 PIG_VERSION.ITEM.CLOUDERA_CDH4=Cloudera CDH4
 
