--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSFileExist/tHDFSFileExist_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSFileExist/tHDFSFileExist_messages.properties
@@ -1,5 +1,5 @@
-HELP=org.talend.help.tHDFSDelete
-LONG_NAME=Delete file or directory on HDFS
+HELP=org.talend.help.tHDFSFileExist
+LONG_NAME=Checks if a file exists on HDFS
 
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 CONNECTION.NAME=Component list
@@ -33,7 +33,6 @@ HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
-DELETE_PATH.NAME=Delete Path
 CURRENT_STATUS.NAME=Current Status
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
