Google Big Query components: Fix the LONG NAME and the HELP properties
git-svn-id: http://talendforge.org/svn/tos/trunk@87931 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tBigQueryBulkExec/tBigQueryBulkExec_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tBigQueryBulkExec/tBigQueryBulkExec_messages.properties
@@ -1,7 +1,7 @@
 #Created by JInto - www.guh-software.de
 #Wed Mar 19 09:39:53 CST 2008
-LONG_NAME=Connect  and run a query on Google BigQuery 
-HELP=org.talend.help.tBigQueryInput
+LONG_NAME=Connects and loads data efficiently from a file into Google BigQuery
+HELP=org.talend.help.tBigQueryBulkExec
 
 CLIENT_ID.NAME=Client Id
 CLIENT_SECRET.NAME=Client Secret
