--- a/org.talend.designer.components.tishadoopprovider/components/tBigQueryOutput/tBigQueryOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tBigQueryOutput/tBigQueryOutput_messages.properties
@@ -13,6 +13,8 @@ FILENAME.NAME=Local filename
 FLUSHONROW.NAME=Custom the flush buffer size
 FLUSHONROW_NUM.NAME=Row number
 
+LONG.NAME=Connects and loads data from a flow into Google BigQuery
+HELP=org.talend.help.tBigQueryOutput
 CLIENT_ID.NAME=Client Id
 CLIENT_SECRET.NAME=Client Secret
 PROJECT_ID.NAME=Project Id
