--- a/org.talend.designer.components.tishadoopprovider/components/tBigQueryOutputBulk/tBigQueryOutputBulk_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tBigQueryOutputBulk/tBigQueryOutputBulk_messages.properties
@@ -4,9 +4,9 @@ APPEND.NAME=Append
 ENCODING.NAME=Encoding
 FIELDSEPARATOR.NAME=Field Separator
 FILENAME.NAME=File Name
-HELP=org.talend.help.tMysqlOutputBulk
+HELP=org.talend.help.tBigQueryOutputBulk
 INCLUDEHEADER.NAME=Include Header
-LONG_NAME=Builds a MySQL format bulk file
+LONG_NAME=Writes a temporary file to feed the Google BigQuery
 NB_LINE.NAME=Number of line
 ROWSEPARATOR.NAME=Row Separator
 SCHEMA.NAME=Schema
