HDFS components: Add a GROUP for the connection part.
git-svn-id: http://talendforge.org/svn/tos/trunk@87937 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -42,3 +42,5 @@ FILE.NAME=File to compare
 FILE_REF.NAME=Reference file
 NO_DIFFER_MESSAGE.NAME=If no differences detected, display
 PRINT.NAME=Print to console
+
+CONN.NAME=Connection
