--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -43,3 +43,4 @@ REPLACE_FILE.NAME=Override target file(don't override the directory)
 DESTINATION_FILEPATH.NAME=Destination file or directory path
 SOURCE_FILEPATH.NAME=Source file or directory path
 
+CONN.NAME=Connection
