--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -35,3 +35,5 @@ CURRENT_STATUS.NAME=Current Status
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+CONN.NAME=Connection
