--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSGet/tHDFSGet_messages.properties
@@ -45,3 +45,5 @@ APPEND.NAME=Append
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+CONN.NAME=Connection
