--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
@@ -35,3 +35,5 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+CONN.NAME=Connection
