--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSRename/tHDFSRename_messages.properties
@@ -40,3 +40,5 @@ USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CURRENT_STATUS.NAME=Current Status
+
+CONN.NAME=Connection
