--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSRowCount/tHDFSRowCount_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSRowCount/tHDFSRowCount_messages.properties
@@ -36,3 +36,5 @@ FILENAME.NAME=File Name
 ROWSEPARATOR.NAME=Row Separator
 IGNORE_EMPTY_ROW.NAME=Ignore empty rows
 COUNT.NAME=Number of counted lines
+
+CONN.NAME=Connection
