--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSExist/tHDFSExist_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSExist/tHDFSExist_messages.properties
@@ -37,3 +37,5 @@ CURRENT_STATUS.NAME=Current Status
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+CONN.NAME=Connection
