--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -40,3 +40,5 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+CONN.NAME=Connection
