--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSPut/tHDFSPut_messages.properties
@@ -46,3 +46,5 @@ APPEND.NAME=Append
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+CONN.NAME=Connection
