Fix Work Item TDI-22062: Make the tMongoDBInput and tMongoDBConnection work after the Exchange component migration http://jira.talendforge.org/browse/TDI-22062 Note: 1.Add Migration task to change tMongoDBInput "SORT" form text field to table field . 2.Fix "tMongoDBInput" query and tMongoDBRow "function" contain "\n" have compile error. 3.Fix old job tMongoDBConnection password fill char array import compile error.
git-svn-id: http://talendforge.org/svn/tos/trunk@87993 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -16,7 +16,7 @@ PROPERTY.NAME=PROPERTY
 QUERY.NAME=Query
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 SORT.NAME=Sort by
-SORT.ITEM.COLNAME=Schema column
+SORT.ITEM.COLNAME=Column
 SORT.ITEM.ORDER=Order asc or desc?
 SORT.ITEM.ORDER.ITEM.ASC=asc
 SORT.ITEM.ORDER.ITEM.DESC=desc
