fix Feature TDI-22090: support CDH4 for tHiveXXX components
git-svn-id: http://talendforge.org/svn/tos/trunk@88070 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages.properties
@@ -31,11 +31,13 @@ VERSION.NAME=Version
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.APACHE=Apache
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 
 HIVE_VERSION.NAME=Hive version
 HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
+HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
 CONNECTION_MODE.NAME=Connection mode
 CONNECTION_MODE.ITEM.EMBEDDED=Embedded
