TDI-22134: modify the components for uniformisation.
git-svn-id: http://talendforge.org/svn/tos/trunk@88207 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSRename/tHDFSRename_messages.properties
@@ -21,8 +21,7 @@ DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
-HOST.NAME=Host
-PORT.NAME=Port
+FS_DEFAULT_NAME.NAME=NameNode URI
 USERNAME.NAME=Username
 GROUP.NAME=Group
 REMOTEDIR.NAME=HDFS directory
