TDI-22263: add the security for HCatalog.
git-svn-id: http://talendforge.org/svn/tos/trunk@88685 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogLoad/tHCatalogLoad_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogLoad/tHCatalogLoad_messages.properties
@@ -14,6 +14,9 @@ HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 TEMPLETON_CONFIGURATION.NAME=Templeton Configuration
 TEMPLETON_HOST.NAME=Templeton hostname
 TEMPLETON_PORT.NAME=Templeton port
+USE_KRB.NAME=Use kerberos authentication
+KRB_PRINC.NAME=Templeton principal
+KRB_REALM.NAME=Realm
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
