--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -14,6 +14,10 @@ HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 TEMPLETON_CONFIGURATION.NAME=Templeton Configuration
 TEMPLETON_HOST.NAME=Templeton hostname
 TEMPLETON_PORT.NAME=Templeton port
+USE_KRB.NAME=Use kerberos authentication
+KRB_PRINC.NAME=Templeton principal
+NAMENODE_PRINCIPAL.NAME=Namenode principal
+KRB_REALM.NAME=Realm
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
