--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogOperation/tHCatalogOperation_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogOperation/tHCatalogOperation_messages.properties
@@ -14,6 +14,9 @@ HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 TEMPLETON_CONFIGURATION.NAME=Templeton Configuration
 TEMPLETON_HOST.NAME=Templeton hostname
 TEMPLETON_PORT.NAME=Templeton port
+USE_KRB.NAME=Use kerberos authentication
+KRB_PRINC.NAME=Templeton principal
+KRB_REALM.NAME=Realm
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 DROP_CONFIGURATION.NAME=Drop Configuration
@@ -28,7 +31,7 @@ USERNAME.NAME=Username
 SET_FILE_LOCATION.NAME=Set file location
 FILE_LOCATION.NAME=
 
-DIE_ON_ERROR.NAME=Die on error
+DIE_ON_ERROR.NAME=Die on error	
 
 OPERATION_ON.NAME=Operation on:
 OPERATION_ON.ITEM.OP_DATABASE=Database
