--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -12,6 +12,12 @@ HCAT_VERSION.NAME=HCatalog version
 HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 
 HDFS_CONFIGURATION.NAME=HDFS Configuration
+
+USE_KRB.NAME=Use kerberos authentication
+NAMENODE_PRINCIPAL.NAME=Namenode principal
+KRB_PRINC.NAME=Templeton principal
+KRB_REALM.NAME=Realm
+
 FS_DEFAULT_NAME.NAME=NameNode URI
 FILENAME.NAME=File name
 
