Fix new feature TDI-22034 :remove some unnecessary code and change “UPDATE” to “OVERWRITE” in "Action on data" list.
git-svn-id: http://talendforge.org/svn/tos/trunk@88812 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -1,14 +1,9 @@
 #Created by jjzhou - www.talend.com
 #Wed Agu 03 17:18:33 CST 2012
 DATA_ACTION.ITEM.INSERT=Insert
-DATA_ACTION.ITEM.UPDATE=OverWrite
+DATA_ACTION.ITEM.OVERWRITE=OverWrite
 DATA_ACTION.NAME=Action on data
- 
 ELT_TABLE_NAME.NAME=Default Table Name
-ELT_SCHEMA_NAME.NAME=Default Schema Name
-
-USE_DIFFERENT_TABLE.NAME=Use different table name
-DIFFERENT_TABLE_NAME.NAME=Table name
 
 HELP=org.talend.help.tELTHiveOutput
 LONG_NAME=Executes an insert query from a select query built by tELTHiveMap
