TDI-20502: Change the component display.
git-svn-id: http://talendforge.org/svn/tos/trunk@88815 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -10,3 +10,6 @@ PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 PROPERTY.NAME=PROPERTY
 USERNAME.NAME=Username
+
+CONNECTION.NAME=Connection
+AUTHENTICATION.NAME=Authentication
