--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -22,3 +22,6 @@ SORT.ITEM.ORDER.ITEM.ASC=asc
 SORT.ITEM.ORDER.ITEM.DESC=desc
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
+
+CONNECTION.NAME=Connection
+AUTHENTICATION.NAME=Authentication
