--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -23,3 +23,6 @@ REQUIRED_AUTHENTICATION.NAME=Required authentication
 SCHEMA.NAME=SCHEMA
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
+
+CONNECTION.NAME=Connection
+AUTHENTICATION.NAME=Authentication
