--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -17,3 +17,6 @@ FUNCTION_PARAMETERS.NAME=Parameters value
 FUNCTION_PARAMETERS.ITEM.PARAMETER=Parameters value
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
+
+CONNECTION.NAME=Connection
+AUTHENTICATION.NAME=Authentication
