fix Bug TDI-21337: support free form query in sqoop
git-svn-id: http://talendforge.org/svn/tos/trunk@88900 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tSqoopImport/tSqoopImport_messages.properties
@@ -55,3 +55,6 @@ ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
 
 OUTPUT_MESSAGE.NAME=Output Message
+
+USE_QUERY.NAME=Use query
+QUERY.NAME=Query
