Fix new feature TDI-22034 : support partition function.
git-svn-id: http://talendforge.org/svn/tos/trunk@88976 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -7,3 +7,8 @@ ELT_TABLE_NAME.NAME=Default Table Name
 
 HELP=org.talend.help.tELTHiveOutput
 LONG_NAME=Executes an insert query from a select query built by tELTHiveMap
+
+TABLE_IS_PARTITION.NAME=Table is Partition
+FIELD_PARTITION.NAME=Field Partition
+FIELD_PARTITION.ITEM.COLUMN_NAME=Partition Column
+FIELD_PARTITION.ITEM.COLUMN_VALUE=Partition Value
