--- a/org.talend.designer.components.tishadoopprovider/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -12,3 +12,6 @@ TABLE_IS_PARTITION.NAME=Table is Partition
 FIELD_PARTITION.NAME=Field Partition
 FIELD_PARTITION.ITEM.COLUMN_NAME=Partition Column
 FIELD_PARTITION.ITEM.COLUMN_VALUE=Partition Value
+
+NB_LINE_INSERTED.NAME=Number Of Inserted Lines
+NB_LINE_OVERWRITE.NAME=Number Of Overwrite Lines
