Fix  Backlog Task TDI-22363:Create the component tCassandraRow https://jira.talendforge.org/browse/TDI-22363 Note: 1.Add tCassandraRow 2.Add die on error in tCassandraOutput 3.Remove some unuseed code 4.Fixed tCassandraOutput  generate duplicated code when use delete action.
git-svn-id: http://talendforge.org/svn/tos/trunk@89213 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -22,6 +22,7 @@ CLUSTER.NAME=Cluster
 COLUMN_FAMILY.NAME=Column family
 COLUMN_FAMILY_CONFIGURATION.NAME=Column family configuration
 CONNECTION.NAME=Component List
+DIE_ON_ERROR.NAME=Die on error
 HELP=org.talend.help.tCassandraOutput
 HOST.NAME=Host
 INC_KEY.NAME=Include key in columns
