feature TDI-22127 added : Add a repository metadata for HDFS
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@89400 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/plugin.xml
+++ b/org.talend.repository.hdfs/plugin.xml
@@ -8,7 +8,7 @@
             class="org.talend.repository.hdfs.node.HDFSExtendNode"
             folder="metadata/hdfs"
             isResouce="true"
-            label="HDFS"
+            label="%HDFS"
             products="DI"
             type="HDFS">
       </repositoryNode>
