Fix New Feature TDI-22436 : Ability to add more than 1 IP in case of MongoDB replicasets (3) https://jira.talendforge.org/browse/TDI-22436
git-svn-id: http://talendforge.org/svn/tos/trunk@89405 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -10,6 +10,9 @@ PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 PROPERTY.NAME=PROPERTY
 USERNAME.NAME=Username
-
+USE_REPLICA_SET.NAME=Use replica set address
+REPLICA_SET.NAME=Replica address
+REPLICA_SET.ITEM.REPLICA_HOST=Replica host
+REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
