--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -22,6 +22,9 @@ SORT.ITEM.ORDER.ITEM.ASC=asc
 SORT.ITEM.ORDER.ITEM.DESC=desc
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
-
+USE_REPLICA_SET.NAME=Use replica set address
+REPLICA_SET.NAME=Replica address
+REPLICA_SET.ITEM.REPLICA_HOST=Replica host
+REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
