--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -23,6 +23,9 @@ REQUIRED_AUTHENTICATION.NAME=Required authentication
 SCHEMA.NAME=SCHEMA
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
-
+USE_REPLICA_SET.NAME=Use replica set address
+REPLICA_SET.NAME=Replica address
+REPLICA_SET.ITEM.REPLICA_HOST=Replica host
+REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
