--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -17,6 +17,9 @@ FUNCTION_PARAMETERS.NAME=Parameters value
 FUNCTION_PARAMETERS.ITEM.PARAMETER=Parameters value
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
-
+USE_REPLICA_SET.NAME=Use replica set address
+REPLICA_SET.NAME=Replica address
+REPLICA_SET.ITEM.REPLICA_HOST=Replica host
+REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
