--- a/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -1,8 +1,11 @@
 #
 #Mon Apr 12 14:26:42 CEST 2010
+AUTHENTICATION.NAME=Authentication
 COLLECTION.NAME=Collection
+COMPACT_FORMAT.NAME = Compact Format
 CONNECTION.NAME=Component List
 DATABASE.NAME=Database
+DATA_NODE.NAME=Data node
 DATA_ACTION.ITEM.DELETE=Delete
 DATA_ACTION.ITEM.INSERT=Insert
 DATA_ACTION.ITEM.UPDATE=Update
@@ -10,16 +13,42 @@ DATA_ACTION.ITEM.UPSERT=Upsert
 DATA_ACTION.NAME=Action on data
 DIE_ON_ERROR.NAME=Die on error
 DROP_COLLECTION_CREATE.NAME=Drop collection if exist
+GROUP.ITEM.ATTRIBUTE=Attribute
+GROUP.ITEM.ORDER=Order
+GROUP.ITEM.COLUMN=Related Column
+GROUP.ITEM.PATH=JSON path
+GROUP.ITEM.VALUE=Default value
+GROUP.NAME=Group by
+GROUPBYS.ITEM.INPUT_COLUMN=Input column
+GROUPBYS.ITEM.OUTPUT_COLUMN=Output column
+GROUPBYS.NAME=Group by
 HELP=org.talend.help.tMongoDBOutput
 HOST.NAME=Server
+JSON_CONFIGURATION.NAME=JSON Confiuration
+IS_VIRTUAL_COMPONENT.NAME=Generate JSON Document
 LONG_NAME=Inserts or updates documents into a MongoDB collection
+LOOP.ITEM.ATTRIBUTE=Attribute
+LOOP.ITEM.ORDER=Order
+LOOP.ITEM.COLUMN=Related Column
+LOOP.ITEM.PATH=JSON path
+LOOP.ITEM.VALUE=Default value
+LOOP.NAME=JSON Loop
+MAP.NAME=Configure JSON Tree
 MAPPING.ITEM.PARENT_NODE_PATH=Parent node path
 MAPPING.NAME=Mapping
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
 PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
+QUERY_NODE.NAME=Query node
+REMOVE_ROOT.NAME=Remove root node.
 REQUIRED_AUTHENTICATION.NAME=Required authentication
+ROOT.ITEM.ATTRIBUTE=Attribute
+ROOT.ITEM.ORDER=Order
+ROOT.ITEM.COLUMN=Related Column
+ROOT.ITEM.PATH=JSON Path
+ROOT.ITEM.VALUE=Default value
+ROOT.NAME=Root
 SCHEMA.NAME=SCHEMA
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
@@ -27,5 +56,3 @@ USE_REPLICA_SET.NAME=Use replica set address
 REPLICA_SET.NAME=Replica address
 REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
-CONNECTION.NAME=Connection
-AUTHENTICATION.NAME=Authentication
