fix Feature TDI-22329:  add the field,row delimited,encoding support for hadoop file system component. https://jira.talendforge.org/browse/TDI-22329
git-svn-id: http://talendforge.org/svn/tos/trunk@89635 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
@@ -37,3 +37,7 @@ USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
+
+ROWSEPARATOR.NAME=Row Separator
+FIELDSEPARATOR.NAME=Field Separator
+ENCODING.NAME=Encoding
