--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -47,3 +47,7 @@ DIE_ON_ERROR.NAME=Die on error
 ACTIVATE_LOG.NAME=Retrieve the HCatalog logs
 STDOUT.NAME=Standard Output Folder
 STDERR.NAME=Error Output Folder
+
+ROWSEPARATOR.NAME=Row Separator
+FIELDSEPARATOR.NAME=Field Separator
+ENCODING.NAME=Encoding
