--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSGet/tHDFSGet_messages.properties
@@ -16,6 +16,7 @@ DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
 DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
 DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 DB_VERSION.ITEM.MapR=MapR 1.2.0
+DB_VERSION.ITEM.MapR2=MapR 2.0.0
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
