Fix Bug TDI-22329 : tHDFS*, tHCatalog* Field delimiter and row separator https://jira.talendforge.org/browse/TDI-22329 Note: Fix  encoding is changed when old job was import
git-svn-id: http://talendforge.org/svn/tos/trunk@89855 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -37,5 +37,6 @@ STDERR.NAME=Error Output Folder
 
 ROWSEPARATOR.NAME=Row Separator
 FIELDSEPARATOR.NAME=Field Separator
+CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
 
