--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -46,4 +46,5 @@ CONN.NAME=Connection
 
 ROWSEPARATOR.NAME=Row Separator
 FIELDSEPARATOR.NAME=Field Separator
+CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
