--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -50,4 +50,5 @@ STDERR.NAME=Error Output Folder
 
 ROWSEPARATOR.NAME=Row Separator
 FIELDSEPARATOR.NAME=Field Separator
+CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
