Fix Bug TDI-22329 : tHDFS*, tHCatalog* Field delimiter and row separator https://jira.talendforge.org/browse/TDI-22329 Note:Merge to branch 5.1
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_1@89856 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -36,3 +36,8 @@ DIE_ON_ERROR.NAME=Die on error
 ACTIVATE_LOG.NAME=Retrieve the HCatalog logs
 STDOUT.NAME=Standard Output Folder
 STDERR.NAME=Error Output Folder
+
+ROWSEPARATOR.NAME=Row Separator
+FIELDSEPARATOR.NAME=Field Separator
+CUSTOM_ENCODING.NAME=Custom encoding
+ENCODING.NAME=Encoding
