--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSInput/tHDFSInput_messages.properties
@@ -26,3 +26,8 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_KRB.NAME=Use kerberos authentication (Experimental)
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+
+ROWSEPARATOR.NAME=Row Separator
+FIELDSEPARATOR.NAME=Field Separator
+CUSTOM_ENCODING.NAME=Custom encoding
+ENCODING.NAME=Encoding
