--- a/org.talend.designer.components.bigdata/.project
+++ b/org.talend.designer.components.bigdata/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.talend.designer.components.tishadoopprovider</name>
+	<name>org.talend.designer.components.bigdata</name>
 	<comment></comment>
 	<projects>
 	</projects>
